# polarize

./: .pre-commit-config.yaml  combinatorics.ipynb  create-sprites.py  draw-sprites.py  get-stats.sh  index-staging.html  index.html  polarize.js  puzzle_stats.ipynb  pyproject.toml  requirements.txt  update.sh
.github/workflows/: tests.yml
polarize/: count.py  difficulty.py  encode.py  game.py  generate.py  main.py  model.py  solve.py  stats.py  storage.py
polarize/tests/: strategies.py  test_count.py  test_difficulty.py  test_encode.py  test_generate.py  test_model.py  test_puzzles.py  test_solve.py  test_storage.py
puzzles/: puzzle-2025-01-02.json  puzzle-2025-01-04.json  puzzle-2025-01-05.json  puzzle-2025-01-11.json  puzzle-2025-01-12.json  puzzle-2025-01-13.json  puzzle-2025-01-14.json  puzzle-2025-01-15.json  puzzle-2025-01-16.json  puzzle-2025-01-17.json  puzzle-2025-01-18.json  puzzle-2025-01-19.json  puzzle-2025-01-20.json  puzzle-2025-01-21.json  puzzle-2025-01-22.json  puzzle-2025-01-23.json  puzzle-2025-01-24.json  puzzle-2025-01-25.json  puzzle-2025-01-26.json  puzzle-2025-01-27.json  puzzle-2025-01-28.json  puzzle-2025-01-29.json  puzzle-2025-01-30.json  puzzle-2025-01-31.json  puzzle-2025-02-01.json  puzzle-2025-02-02.json  puzzle-2025-02-03.json  puzzle-2025-02-04.json  puzzle-2025-02-05.json  puzzle-2025-02-06.json  puzzle-2025-02-07.json  puzzle-2025-02-08.json  puzzle-2025-02-09.json  puzzle-2025-02-10.json  puzzle-2025-02-11.json  puzzle-2025-02-12.json  puzzle-2025-02-13.json  puzzle-2025-02-14.json  puzzle-2025-02-15.json  puzzle-2025-02-16.json  (+467 more)
