[build-system]
requires = ["setuptools >= 69", "setuptools_scm[toml] >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "polarize"
description = "An optical puzzle"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Tom White", email = "tom.e.white@gmail.com"},
]
dependencies = [
    "arcade",
    "click",
    "numba",
    "numpy",
    "pytest",
    "pytest-cov",
    "rich",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/tomwhite/polarize"

[project.scripts]
puzzle = "polarize.main:cli"

[tool.setuptools]
packages = ["polarize"]